Adding Firebase auth
