# src/main/java/com/example/products/model/RoleRequest.java
@@ -1,0 +1,15 @@
+package com.example.products.model;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+public class RoleRequest {
+    @NotNull
+    @NotEmpty
+    private List<@NotBlank String> roles;
+}
