# src/main/resources/openapi.yaml
@@ -6,7 +6,64 @@ servers:
 - url: http://localhost:8080
   description: Generated server url
 paths:
-  /api/products/{productId}/images/{imageId}:
+  /admin/api/tags/{id}:
+    get:
+      tags:
+      - tag-controller
+      operationId: findById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TagResponse"
+    put:
+      tags:
+      - tag-controller
+      operationId: update
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TagRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TagResponse"
+    delete:
+      tags:
+      - tag-controller
+      operationId: delete
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+  /admin/api/products/{productId}/images/{imageId}:
     put:
       tags:
       - product-image-controller
@@ -57,11 +114,11 @@ paths:
       responses:
         "200":
           description: OK
-  /api/products/{id}:
+  /admin/api/products/{id}:
     get:
       tags:
       - product-controller
-      operationId: findById
+      operationId: findById_1
       parameters:
       - name: id
         in: path
@@ -79,7 +136,7 @@ paths:
     put:
       tags:
       - product-controller
-      operationId: update
+      operationId: update_1
       parameters:
       - name: id
         in: path
@@ -103,7 +160,7 @@ paths:
     delete:
       tags:
       - product-controller
-      operationId: delete
+      operationId: delete_1
       parameters:
       - name: id
         in: path
@@ -114,10 +171,59 @@ paths:
       responses:
         "200":
           description: OK
-  /api/products:
-    get:
+  /admin/api/products/{id}/tags:
+    put:
       tags:
       - product-controller
+      operationId: setTags
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                type: integer
+                format: int64
+              uniqueItems: true
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProductResponse"
+  /admin/api/users/{uid}/roles:
+    post:
+      tags:
+      - role-management-controller
+      operationId: assignRoles
+      parameters:
+      - name: uid
+        in: path
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RoleRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+  /admin/api/tags:
+    get:
+      tags:
+      - tag-controller
       operationId: findAll
       responses:
         "200":
@@ -127,11 +233,64 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/ProductResponse"
+                  $ref: "#/components/schemas/TagResponse"
+    post:
+      tags:
+      - tag-controller
+      operationId: create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TagRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TagResponse"
+  /admin/api/products:
+    get:
+      tags:
+      - product-controller
+      operationId: findAll_1
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 20
+      - name: tagIds
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+          uniqueItems: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PageResponseProductResponse"
     post:
       tags:
       - product-controller
-      operationId: create
+      operationId: create_1
       requestBody:
         content:
           application/json:
@@ -145,7 +304,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ProductResponse"
-  /api/products/{productId}/images:
+  /admin/api/products/{productId}/images:
     get:
       tags:
       - product-image-controller
@@ -192,7 +351,7 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/ImageResponse"
-  /api/products/import:
+  /admin/api/products/import:
     post:
       tags:
       - bulk-import-controller
@@ -215,8 +374,113 @@ paths:
             '*/*':
               schema:
                 type: object
+  /api/tags:
+    get:
+      tags:
+      - public-tag-controller
+      operationId: findAll_2
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TagResponse"
+  /api/tags/{id}:
+    get:
+      tags:
+      - public-tag-controller
+      operationId: findById_2
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/TagResponse"
+  /api/products:
+    get:
+      tags:
+      - public-product-controller
+      operationId: findAll_3
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 20
+      - name: tagIds
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: integer
+            format: int64
+          uniqueItems: true
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/PageResponseProductResponse"
+  /api/products/{id}:
+    get:
+      tags:
+      - public-product-controller
+      operationId: findById_3
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProductResponse"
 components:
   schemas:
+    TagRequest:
+      type: object
+      properties:
+        name:
+          type: string
+          maxLength: 100
+          minLength: 0
+      required:
+      - name
+    TagResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
     DisplayOrderRequest:
       type: object
       properties:
@@ -269,6 +533,21 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/ImageResponse"
+        tags:
+          type: array
+          items:
+            $ref: "#/components/schemas/TagResponse"
+    RoleRequest:
+      type: object
+      properties:
+        roles:
+          type: array
+          items:
+            type: string
+            minLength: 1
+          minItems: 1
+      required:
+      - roles
     ImageRequest:
       type: object
       properties:
@@ -281,3 +560,26 @@ components:
           minItems: 1
       required:
       - urls
+    PageResponseProductResponse:
+      type: object
+      properties:
+        content:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductResponse"
+        page:
+          type: integer
+          format: int32
+        size:
+          type: integer
+          format: int32
+        totalElements:
+          type: integer
+          format: int64
+        totalPages:
+          type: integer
+          format: int32
+        first:
+          type: boolean
+        last:
+          type: boolean
